# pybrowser

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  out.txt  outerr.txt  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/pybrowser/: index.doctree
docs/_build/doctrees/autoapi/thatscraper/: index.doctree
docs/_build/doctrees/autoapi/thatscrapper/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pybrowser/: browser.html  data.html  extractor.html
docs/_build/html/_modules/thatscraper/: browser.html  data.html  extractor.html
docs/_build/html/_modules/thatscrapper/: browser.html  data.html  extractor.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/pybrowser/: index.html
docs/_build/html/autoapi/thatscraper/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/pybrowser/: __init__.py  window.py
src/pybrowser/common/: exceptions.py
src/thatscraper/: browser.py
tests/: test_browser.py  test_extractor.py  test_pybrowser.py  test_thatscrapper.py
(+60 files in other folders)
