[tool.poetry]
name = "pybrowser"
version = "0.1.0"
description = "A selenium framework for automated actions on browsers"
authors = ["Vagner Bessa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
